--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,6 @@
   text-align: center;
 }
 
-.padme{
-  padding-left: 20px;
-  padding-top: 20px;
-}
 
 .box{
   width: 200px;
@@ -20,4 +16,13 @@
 
 .choice{
   font-size: 150px;
+}
+
+.container{
+  margin: 30px;
+}
+
+.history{
+vertical-align: top;
+margin-top: 20px;
 }
